[project]
name = "atplt"
description = "AT matplotlib style."
version = "0.1.0"
authors = [
    {name = "Alberto Torralba", email = "alberto.torralba@ist.ac.at"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"matplotlib",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
